Edit to section Changes

--- a/Ex_06.ipynb
+++ b/Ex_06.ipynb
@@ -1083,9 +1083,9 @@
         "\n",
         "Addition of additional dropout layer did not have any significant benefit. Addition of an L1 regularizer lead to a significant decrease in validation accuracy. L2 regularizer lead to a minor increase.\n",
         "\n",
-        "Highest validation accuracy achieved during tuning process was approximately 54.5%. Higher accuracy was not reached, probably mostly because of limited image resolutions of only 32x32 px.\n",
+        "Highest validation accuracy achieved during tuning process was approximately 55%. Higher accuracy was not achieved, main fctor probably being the limited image resolutions of only 32x32 px.\n",
         "\n",
-        "Final test accuracy was 54.1%."
+        "Final test accuracy was 54.2%."
       ]
     },
     {
